trunk/NewArchive/50a36c2ad1a3eb15a0a25d1c39d7ec15-ce6b7b81d29c30e32c78aebe6e642254/output
main.cpp:18:6: error: overload resolution selected deleted operator '='
 A() = A(); // error
 ~~~ ^ ~~~
main.cpp:3:10: note: candidate function [with T = A] has been explicitly deleted
    void operator=(T&&) && = delete; // no op= for rvalues
         ^
main.cpp:11:8: note: candidate function not viable: no known conversion from 'A' to 'A' for object argument
    A& operator=(A&&) & = default;
       ^
main.cpp:12:8: note: candidate function not viable: no known conversion from 'A' to 'A' for object argument
    A& operator=(A const&) & = default;
       ^
1 error generated.
